adding Function more expression basic functions